ending recipesborder-color: rgb(189, 179, 179);     padding-top: 0fr; }

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     </head>
     <body>
         <header id="mainheader"><!--The header of the page-->
-            <img src="/recipes/RecipesLogo.JPG" alt="The logo of the website" id="logo">
+            <img src="./recipes/RecipesLogo.JPG" alt="The logo of the website" id="logo">
             <h1 id="text">The best recipes in Haiti</h1>
         </header><!-- End of the header-->
         <h2>Odin Recipes</h2>
-        <img src="/recipes/cook" alt="The image">
+        <img src="./recipes/cook" alt="The image">
         <p> Here is the list of recipes</p>
         <ul>
             <li><a href="/recipes/lasagna.html">Mashed Potatoes</a></li>
