--- a/recipes/Pizza.html
+++ b/recipes/Pizza.html
@@ -7,7 +7,7 @@
 <body>
     <a href="/index.html"> Return to main's page</a>
     <h1>Pizza & Pizza Dough</h1>
-    <img src="/recipes/Pizzaimages.jpeg" alt="l'image du menu">
+    <img src="../recipes/Pizzaimages.jpeg" alt="l'image du menu">
     <p>  Make perfect pizza at home with this classic homemade<br> pizza recipe, including a pizza dough recipe, topping suggestions<br> and step-by-step instructions</p>
         <h2>For the pizza dough</h2>
     <ul>
