--- a/recipes/chickpea.html
+++ b/recipes/chickpea.html
@@ -7,7 +7,7 @@
 <body>
     <a href="/index.html"> Return to main's page</a>
     <h1>Cheat's chickpea korma curry</h1>
-    <img src="/recipes/ricebike" alt="l'image du menu">
+    <img src="../recipes/ricebike" alt="l'image du menu">
     <p> Asking yourself what's for dinner? Make it easy, <br>by cooking this cheat's chickpea korma curry recipe that's loaded with veggies for a wholesome meat-free meal.</p>
     <h2>5 Ingredients</h2>
     <ul>
