--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,7 +7,7 @@
 <body>
     <a href="/index.html"> Return to main's page</a>
     <h1>Holiday ONLY Mashed Potatoes</h1>
-    <img src="/recipes/image1" alt="l'image du menu">
+    <img src="../recipes/image1" alt="l'image du menu">
     <p>These mashed potatoes are too fattening to have on a regular basis.<br> I only make these on holidays, and everyone wonders what's in them that's makes them so rich...</p>
     <h2>Ingredients</h2>
     <ul>
