--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>The best recipes</title>
-        <link rel="stylesheet" href="/recipes/styles.css">
+        <link rel="stylesheet" href="../odin-recipes/recipes/styles.css">
     </head>
     <body>
         <header id="mainheader"><!--The header of the page-->
